--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- INÍCIO DO MENU -->
+    <header>
+        <div class="container">
+            <h1 id="logo">Peça única</h1>
+            <div class="menu-wrapper">
+                <p class="menu"><a href="#">Início</a></p>
+                <p class="menu"><a href="#servicos">Serviços</a></p>
+                <p class="menu"><a href="#">Contato</a></p>
+            </div>
+        </div>
+    </header>
+    <!-- INÍCIO DA MAIN -->
+    <main>
+        <img src="img/foto2.png" alt="foto da frente da loja">
+        <img src="img/foto1.png" alt="foto de costumização">
+        <img src="img/foto5.png" alt="foto de uma bara original">
+        <img src="img/foto3.png" alt="foto de uma bara original">
+    </main>
+    <section>
+        <div id="servicos">
+            <h1>teste</h1>
+        </div>
+    </section>
 </body>
 </html>
