--- a/index.html
+++ b/index.html
@@ -14,21 +14,42 @@
             <div class="menu-wrapper">
                 <p class="menu"><a href="#">Início</a></p>
                 <p class="menu"><a href="#servicos">Serviços</a></p>
-                <p class="menu"><a href="#">Contato</a></p>
+                <p class="menu"><a href="#contato">Contato</a></p>
             </div>
         </div>
     </header>
-    <!-- INÍCIO DA MAIN -->
+    <!-- INÍCIO DO MAIN -->
     <main>
         <img src="img/foto2.png" alt="foto da frente da loja">
         <img src="img/foto1.png" alt="foto de costumização">
         <img src="img/foto5.png" alt="foto de uma bara original">
-        <img src="img/foto3.png" alt="foto de uma bara original">
+        <img src="img/foto3.png" alt="foto de costumização">
+       
     </main>
-    <section>
-        <div id="servicos">
-            <h1>teste</h1>
+     <!-- INÍCIO DAS SECTIONS -->
+    <section id="servicos">
+        <div class="servicos">
+            <h2>Serviços</h2>
+            <ul>
+                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Consertos de roupas</a></li>
+                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Troca de Zíper</a></li>
+                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Barras</a></li>
+                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Ajustes em Geral</a></li>
+            </ul>
         </div>
     </section>
+    <section id="contato">
+        <div class="contato">
+            <h2>Entre em  contato</h2>
+            <ul>
+                <li><i class="far fa-check-circle"></i>Consertos de roupas</li>
+                <li><i class="far fa-check-circle"></i>Troca de Zíper</li>
+                <li><i class="far fa-check-circle"></i>Barras</li>
+                <li><i class="far fa-check-circle"></i>Ajustes em Geral</li>
+                <li><i class="far fa-check-circle"></i>Brechó</li>
+            </ul>
+        </div>
+    </section>
+    <script src="https://kit.fontawesome.com/491e36c0f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
