alteracao html + css

--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
         <img src="img/foto3.png" alt="foto de costumização">
        
     </main>
-     <!-- INÍCIO DAS SECTIONS -->
+     <!-- INÍCIO SERVICOS -->
     <section id="servicos">
         <div class="servicos">
             <h2>Serviços</h2>
             <ul>
-                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Consertos de roupas</a></li>
-                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Troca de Zíper</a></li>
-                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Barras</a></li>
-                <li><i class="far fa-check-circle"></i><a href="https://api.whatsapp.com/send?phone=11235457890&text=Ol%C3%A1,%20gostaria%20de%20encomendar%20um%20servi%C3%A7o!" target="_blank">Ajustes em Geral</a></li>
+                <li><i class="far fa-check-circle"><a href="#"></a>Consertos de roupas</a> </li>
+                <li><i class="far fa-check-circle"><a href="#"></i>Troca de Zíper</a></li>
+                <li><i class="far fa-check-circle"><a href="#"></i>Barras</a></li>
+                <li><i class="far fa-check-circle"><a href="#"></i>Ajustes em Geral</a></li>
             </ul>
         </div>
     </section>
+      <!-- INÍCIO CONTATO -->
     <section id="contato">
         <div class="contato">
             <h2>Entre em  contato</h2>
             <ul>
-                <li><i class="far fa-check-circle"></i>Consertos de roupas</li>
-                <li><i class="far fa-check-circle"></i>Troca de Zíper</li>
-                <li><i class="far fa-check-circle"></i>Barras</li>
-                <li><i class="far fa-check-circle"></i>Ajustes em Geral</li>
-                <li><i class="far fa-check-circle"></i>Brechó</li>
+                <li><i class="fab fa-facebook-square"><a href=""></a></i>Facebook</li>
+                <li><i class="fab fa-instagram"><a href=""></a></i>Instagram</li>
+                <li><i class="fab fa-whatsapp"><a href=""></a></i>WhastApp</li>
             </ul>
+            <img src="img/qrcode.png" alt="qrcode das redes sociais">
         </div>
     </section>
     <script src="https://kit.fontawesome.com/491e36c0f2.js" crossorigin="anonymous"></script>
