--- a/index.html
+++ b/index.html
@@ -30,24 +30,27 @@
     <section id="servicos">
         <div class="servicos">
             <h2>Serviços</h2>
-            <ul>
-                <li><i class="far fa-check-circle"><a href="#"></a>Consertos de roupas</a> </li>
-                <li><i class="far fa-check-circle"><a href="#"></i>Troca de Zíper</a></li>
-                <li><i class="far fa-check-circle"><a href="#"></i>Barras</a></li>
-                <li><i class="far fa-check-circle"><a href="#"></i>Ajustes em Geral</a></li>
-            </ul>
+            <div class="servicos-wrapper">
+                <ul>
+                    <li><i class="far fa-check-circle"><a href="#"></a></i>Consertos de roupas</li>
+                    <li><i class="far fa-check-circle"><a href="#"></a></i>Zíper</a></li>
+                    <li><i class="far fa-check-circle"><a href="#"></a></i>Barras</a></li>
+                    <li><i class="far fa-check-circle"><a href="#"></a></i>Ajustes em Geral</a></li>
+                </ul>
+                <img src="img/line.jpg" alt="foto de costumização">
+            </div>
         </div>
     </section>
       <!-- INÍCIO CONTATO -->
     <section id="contato">
         <div class="contato">
             <h2>Entre em  contato</h2>
+            <img src="img/qrcode.png" alt="qrcode das redes sociais">
             <ul>
                 <li><i class="fab fa-facebook-square"><a href=""></a></i>Facebook</li>
                 <li><i class="fab fa-instagram"><a href=""></a></i>Instagram</li>
                 <li><i class="fab fa-whatsapp"><a href=""></a></i>WhastApp</li>
             </ul>
-            <img src="img/qrcode.png" alt="qrcode das redes sociais">
         </div>
     </section>
     <script src="https://kit.fontawesome.com/491e36c0f2.js" crossorigin="anonymous"></script>
