--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peça Única</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- INÍCIO DO MENU -->
     <header>
         <div class="container">
-            <h1 id="logo">Peça única</h1>
+            <h1 id="logo">Peça Única</h1>
             <div class="menu-wrapper">
                 <p class="menu"><a href="#">Início</a></p>
                 <p class="menu"><a href="#servicos">Serviços</a></p>
@@ -23,35 +25,43 @@
         <img src="img/foto2.png" alt="foto da frente da loja">
         <img src="img/foto1.png" alt="foto de costumização">
         <img src="img/foto3.png" alt="foto de costumização">
-       
+
     </main>
-     <!-- INÍCIO SERVICOS -->
-    <section id="servicos">
-        <div class="servicos">
-            <h2>Serviços</h2>
-            <div class="servicos-wrapper">
+    <!-- INÍCIO SERVICOS -->
+    <div class="container-section">
+        <section id="servicos">
+            <div class="servicos">
+                <h2>Serviços</h2>
                 <ul>
+                    <li><i class="far fa-check-circle"><a href="#"></a></i>Máscaras de tecido</a></li>
                     <li><i class="far fa-check-circle"><a href="#"></a></i>Consertos de roupas</li>
                     <li><i class="far fa-check-circle"><a href="#"></a></i>Zíper</a></li>
                     <li><i class="far fa-check-circle"><a href="#"></a></i>Barras</a></li>
                     <li><i class="far fa-check-circle"><a href="#"></a></i>Ajustes em Geral</a></li>
                 </ul>
-                <img src="img/line.jpg" alt="foto de costumização">
             </div>
+        </section>
+        <!-- INÍCIO CONTATO -->
+        <section id="contato">
+            <div class="contato">
+                <h2>Entre em contato</h2>
+                <img src="img/qrcode.png" alt="qrcode das redes sociais">
+                <ul>
+                    <li><i class="fab fa-facebook-square"><a href=""></a></i>Facebook</li>
+                    <li><i class="fab fa-instagram"><a href=""></a></i>Instagram</li>
+                    <li><i class="fab fa-whatsapp"><a href=""></a></i>WhastApp</li>
+                </ul>
+            </div>
+        </section>
+    </div>
+    <!-- INÍCIO FOOTER -->
+    <footer>
+        <div class="container-footer">
+            <p>Endereço: Avenida Luiz José Sereno 700 loja 7 - Jundiaí SP  </p>
+            <iframe scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=215&amp;height=215&amp;hl=en&amp;q=Avenida%20Luiz%20Jos%C3%A9%20Sereno%20700%20loja%207%20Jundia%C3%AD+(Pe%C3%A7a%20%C3%9Anica)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="215" height="215" frameborder="0"></iframe>
         </div>
-    </section>
-      <!-- INÍCIO CONTATO -->
-    <section id="contato">
-        <div class="contato">
-            <h2>Entre em  contato</h2>
-            <img src="img/qrcode.png" alt="qrcode das redes sociais">
-            <ul>
-                <li><i class="fab fa-facebook-square"><a href=""></a></i>Facebook</li>
-                <li><i class="fab fa-instagram"><a href=""></a></i>Instagram</li>
-                <li><i class="fab fa-whatsapp"><a href=""></a></i>WhastApp</li>
-            </ul>
-        </div>
-    </section>
+    </footer>
     <script src="https://kit.fontawesome.com/491e36c0f2.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
