--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- INÍCIO FOOTER -->
     <footer>
         <div class="container-footer">
-            <p>Endereço: Avenida Luiz José Sereno 700 loja 7 - Jundiaí SP  </p>
+            <p>Avenida Luiz José Sereno 700 loja 7 - Jundiaí SP  </p>
             <iframe scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=215&amp;height=215&amp;hl=en&amp;q=Avenida%20Luiz%20Jos%C3%A9%20Sereno%20700%20loja%207%20Jundia%C3%AD+(Pe%C3%A7a%20%C3%9Anica)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="215" height="215" frameborder="0"></iframe>
         </div>
     </footer>
