--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <div class="servicos">
                 <h2>Serviços</h2>
                 <ul>
-                    <li><i class="far fa-check-circle"><a href="#"></a></i>Máscaras de tecido</a></li>
-                    <li><i class="far fa-check-circle"><a href="#"></a></i>Consertos de roupas</li>
-                    <li><i class="far fa-check-circle"><a href="#"></a></i>Zíper</a></li>
-                    <li><i class="far fa-check-circle"><a href="#"></a></i>Barras</a></li>
-                    <li><i class="far fa-check-circle"><a href="#"></a></i>Ajustes em Geral</a></li>
+                    <li><i class="far fa-check-circle"></i>Máscaras de tecido</li>
+                    <li><i class="far fa-check-circle"></i>Consertos de roupas</li>
+                    <li><i class="far fa-check-circle"></i>Zíper</li>
+                    <li><i class="far fa-check-circle"></i>Barras</li>
+                    <li><i class="far fa-check-circle"></i>Ajustes em Geral</li>
                 </ul>
             </div>
         </section>
@@ -47,9 +47,10 @@
                 <h2>Entre em contato</h2>
                 <img src="img/qrcode.png" alt="qrcode das redes sociais">
                 <ul>
-                    <li><i class="fab fa-facebook-square"><a href=""></a></i>Facebook</li>
-                    <li><i class="fab fa-instagram"><a href=""></a></i>Instagram</li>
-                    <li><i class="fab fa-whatsapp"><a href=""></a></i>WhastApp</li>
+                    
+                    <li><i class="fab fa-facebook-square"><a href="https://www.facebook.com/pecaunica05/">Facebook</a></i></li>
+                    <li><i class="fab fa-instagram"><a href="https://www.instagram.com/peca_unica_">Instagram</a></i></li>
+                    <li><i class="fab fa-whatsapp"><a href="https://api.whatsapp.com/send?phone=5511995279813&text=Ol%C3%A1%2C%20poderia%20me%20ajudar%3F">WhastApp</a></i></li>
                 </ul>
             </div>
         </section>
