--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <img src="img/qrcode.png" alt="qrcode das redes sociais">
                 <ul>
                     
-                    <li><i class="fab fa-facebook-square"><a href="https://www.facebook.com/pecaunica05/">Facebook</a></i></li>
-                    <li><i class="fab fa-instagram"><a href="https://www.instagram.com/peca_unica_">Instagram</a></i></li>
-                    <li><i class="fab fa-whatsapp"><a href="https://api.whatsapp.com/send?phone=5511995279813&text=Ol%C3%A1%2C%20poderia%20me%20ajudar%3F">WhastApp</a></i></li>
+                    <li><i class="fab fa-facebook-square"><a href="https://www.facebook.com/pecaunica05/" target="_blank">Facebook</a></i></li>
+                    <li><i class="fab fa-instagram"><a href="https://www.instagram.com/peca_unica_" target="_blank">Instagram</a></i></li>
+                    <li><i class="fab fa-whatsapp"><a href="https://api.whatsapp.com/send?phone=5511995279813&text=Ol%C3%A1%2C%20poderia%20me%20ajudar%3F" target="_blank">WhastApp</a></i></li>
                 </ul>
             </div>
         </section>
